--- a/puppeteer/package.json
+++ b/puppeteer/package.json
@@ -9,12 +9,18 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "axios": "^1.7.7",
         "express": "^4.21.1",
-        "puppeteer": "^23.9.0"
+        "puppeteer": "^23.9.0",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.7"
     },
     "devDependencies": {
         "@types/express": "^5.0.0",
         "@types/node": "^22.9.1",
+        "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
     }
